--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,9 @@
 <!doctype html>
 <html>
   <head>
-    <title>Socket.IO chat</title>
-    <style>
-      * { margin: 0; padding: 0; box-sizing: border-box; }
-      body { font: 13px Helvetica, Arial; }
-      form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
-      form input { border: 0; padding: 10px; width: 90%; margin-right: 0.5%; }
-      form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
-      #messages { list-style-type: none; margin: 0; padding: 0; }
-      #messages li { padding: 5px 10px; }
-      #messages li:nth-child(odd) { background: #eee; }
-    </style>
+    <title>Chatroom JS</title>
 
+    <script src="./js/actions.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script>
         var socket = io();
@@ -20,9 +11,8 @@
 
   </head>
   <body>
-    <ul id="messages"></ul>
-    <form action="">
-      <input id="m" autocomplete="off" /><button>Send</button>
-    </form>
+          <label for="inputName">Type your name</label>
+          <input type="text" id="inputName">
+          <button click="socket.send()">Send</button>
   </body>
 </html>
